added all pages to nav

--- a/developers/kailua/intro.mdx
+++ b/developers/kailua/intro.mdx
@@ -1,4 +1,7 @@
-# Introducing OP Kailua: A Hybrid Architecture for OP Rollups
+---
+title: Kailua - A Hybrid Architecture for OP Rollups
+
+---
 
 :::warning[Caution]
 `OP Kailua` as well as `kona` are still in active development and are NOT recommended for production usage.
