--- a/developers/proof-lifecycle.mdx
+++ b/developers/proof-lifecycle.mdx
@@ -1,10 +1,11 @@
 ---
 title: Proof Lifecycle
 description: The lifecycle of a proof on Boundless.
-icon: 'recycle'
 ---
 
 import { StripRustCodeComments } from "../../components/strip-rust-code-comments";
+
+# Proof Lifecycle
 
 > Prerequisite Reading: [Why Boundless?](/developers/why), [What is Boundless?](/developers/what)
 
