--- a/developers/quick-start.mdx
+++ b/developers/quick-start.mdx
@@ -1,8 +1,5 @@
----
-title: Quick Start
-description:
-icon: 'play'
----
+
+# Quick Start (Build)
 
 :::tip[Need technical support?]
 For technical support, please post your questions on the [Boundless Discussions Forum](https://github.com/boundless-xyz/boundless/discussions).
