--- a/developers/tutorials/auction.mdx
+++ b/developers/tutorials/auction.mdx
@@ -1,10 +1,6 @@
----
-title: Set up the Auction
-description:
-icon: 'money-bill-transfer'
----
-
 import TimeCalculator from "../../../components/time-calculator";
+
+# Set up the Auction
 
 ## Overview
 
