--- a/developers/tutorials/bonsai.mdx
+++ b/developers/tutorials/bonsai.mdx
@@ -1,8 +1,9 @@
 ---
 title: Migrating from Bonsai
 description: A practical guide for developers transitioning from Bonsai to Boundless
-icon: 'tree'
 ---
+
+# Migrating from Bonsai
 
 ## What happened to Bonsai?
 
