--- a/developers/tutorials/callbacks.mdx
+++ b/developers/tutorials/callbacks.mdx
@@ -1,11 +1,11 @@
 ---
 title: Callbacks
 description: Callbacks are a feature of the Boundless Market that allows you to receive notifications when a proof is fulfilled.
-icon: 'webhook'
 ---
 
 import { StripRustCodeComments } from "../../../components/strip-rust-code-comments";
 
+# Callbacks
 
 > Prerequisite Reading: [Request a Proof](/developers/tutorials/request), [Proof Lifecycle](/developers/proof-lifecycle)
 
