--- a/developers/tutorials/proof-composition.mdx
+++ b/developers/tutorials/proof-composition.mdx
@@ -1,11 +1,11 @@
 ---
 title: Proof Composition
 description: Proof composition allows you to build upon existing proofs by verifying them within new zkVM guest programs.
-icon: 'rectangle-vertical-history'
 ---
 
 import { StripRustCodeComments } from "../../../components/strip-rust-code-comments";
 
+# Proof Composition
 
 > Prerequisite Reading: [Request a Proof](/developers/tutorials/request), [Proof Lifecycle](/developers/proof-lifecycle)
 
