--- a/developers/tutorials/sensitive-inputs.mdx
+++ b/developers/tutorials/sensitive-inputs.mdx
@@ -1,11 +1,11 @@
 ---
 title: Sensitive Inputs via AWS S3
 description: This tutorial shows how to upload program inputs to Amazon S3, and use IAM roles and optionally SSE-KMS to gate access to specific trusted Boundless provers. It also shows how a prover can access these sensitive inputs.
-icon: 'user-secret'
 ---
 
 import { StripRustCodeComments } from "../../../components/strip-rust-code-comments";
 
+# Sensitive Inputs via AWS S3
 
 When [requesting a proof](/developers/tutorials/build), requestors need to upload both their program binary (ELF) and the associated inputs to a compatible storage provider.
 This allows the prover to download the required program and inputs to begin proving.
@@ -209,7 +209,7 @@ If you have already uploaded your inputs using the `aws` CLI above, you can skip
 
 After this setup, you may request a proof programmatically as [Request a Proof](/developers/tutorials/request) recommends; your inputs will be automatically uploaded to your gated S3 bucket, however remember that you still need to go through all the necessary gating policies as laid out in this tutorial to make sure your inputs are private and only available to select provers.
 
-If you're interested in doing a one-off test, take a look at the [request subcommands](/developers/tooling/cli#request) in the Boundless CLI.
+If you're interested in doing a one-off test, take a look at the [requestor module](/developers/tooling/cli#requestor) in the Boundless CLI.
 
 Relevant Links: [StorageProvider](https://docs.rs/boundless-market/latest/boundless_market/storage/trait.StorageProvider.html), [storage_provider_from_env](https://docs.rs/boundless-market/latest/boundless_market/storage/fn.storage_provider_from_env.html).
 
