--- a/developers/tutorials/smart-contract-requestor.mdx
+++ b/developers/tutorials/smart-contract-requestor.mdx
@@ -1,11 +1,11 @@
 ---
 title: Smart Contract Requestors
 description: Smart Contract Requestors enable permissionless proof request submission by 3rd parties that are authorized for payment by a smart contract.
-icon: 'file-contract'
 ---
 
 import { StripRustCodeComments } from "../../../components/strip-rust-code-comments";
 
+# Smart Contract Requestors
 
 ## Overview
 
