--- a/developers/tutorials/tracking.mdx
+++ b/developers/tutorials/tracking.mdx
@@ -1,10 +1,6 @@
----
-title: Tracking a Request
-description:
-icon: 'magnifying-glass'
----
-
 import { StripRustCodeComments } from "../../../components/strip-rust-code-comments";
+
+# Tracking Proof Requests
 
 This guide covers both [tracking a proof request programmatically](#programmatically) and using the [Boundless Explorer](#boundless-explorer).
 
