--- a/developers/tutorials/use.mdx
+++ b/developers/tutorials/use.mdx
@@ -1,10 +1,11 @@
 ---
 title: Use a Proof
 description: After receiving the Boundless proof, you are ready to use it in your app to access verifiable compute directly.
-icon: 'user-plus'
 ---
 
 import { StripRustCodeComments } from "../../../components/strip-rust-code-comments";
+
+# Use a Proof
 
 > Prerequisite Reading: [Request a Proof](/developers/tutorials/request), [Proof Lifecycle](/developers/proof-lifecycle)
 
