--- a/provers/quick-start.mdx
+++ b/provers/quick-start.mdx
@@ -1,20 +1,6 @@
 import { YoutubeEmbed } from '../../components/youtube-embed';
 
 # Quick Start (Prove)
-## Video Walkthrough
-
-:::note[Boundless has launched Mainnet]
-This video was recorded early July 2025 during Boundless Mainnet Beta; there have been some further changes to the setup process. For the latest commands, make sure to check the tutorial below.
-:::
-
-To run your prover on Base Mainnet, follow the steps in the video below and make sure to set your RPC endpoint to Base mainnet i.e:
-
-```bash [Terminal]
-export RPC_URL="https://base-mainnet.g.alchemy.com/v2/{YOUR_ALCHEMY_APP_ID}"`
-```
-
-<YoutubeEmbed videoId="MZqU-J-fW2M" />
-
 
 ## Requirements
 
@@ -68,7 +54,11 @@ export PRIVATE_KEY=""
 export RPC_URL=""
 ```
 
-This is the private key to the wallet which will represent your prover on the market; make sure it has funds. For the RPC url, we recommend using an [Alchemy](https://alchemy.com) endpoint for the network you want to prove on.
+This is the private key to the wallet which will represent your prover on the market; make sure it has funds. For the RPC url, we recommend using either [Alchemy](https://alchemy.com) or [Quicknode](https://www.quicknode.com/) paid RPC endpoints.
+
+:::warning
+Note that the free RPC plans from either provider *will not* work for longer than a few hours, and therefore this may cause a prover to get slashed, if free RPC limits are hit, after some orders are locked.
+:::
 
 ## Running a Test Proof
 
@@ -107,6 +97,36 @@ If everything works, you should see something like the following:
 
 ![Bento CLI Test Proof Success](/test-proof.png)
 
+## Running the Prover Setup Wizard
+
+Once Bento is running successfully, it is time to configure the [broker](/provers/proving-stack#what-is-the-broker). The [Boundless CLI](/developers/tooling/cli) provides an interactive setup wizard to help configure the [broker.toml](/provers/broker#settings-in-brokertoml) and [compose.yml](https://github.com/boundless-xyz/boundless/blob/main/compose.yml) files.
+
+### Install the Boundless CLI
+
+First, install the Boundless CLI (the Boundless CLI is separate to the Bento CLI we installed earlier):
+
+```bash
+cargo install --locked --git https://github.com/boundless-xyz/boundless boundless-cli --branch release-1.1 --bin boundless
+```
+
+Once installed, run `boundless` to check it has been installed properly:
+
+![Boundless CLI Homescreen](/boundless_cli_main.png)
+
+### Run the Prover Setup Wizard
+
+To run the prover setup wizard, run:
+
+```bash
+boundless prover generate-config
+```
+
+and an interactive prompt will appear:
+
+![Boundless CLI Prover Setup Wizard](/prover-setup-wizard.png)
+
+Answer the questions as required, based on your setup and requirements. Once finished, the broker.toml and compose.yml files will be created/edited.
+
 ## Running the Broker
 
 :::tip[Need technical support?]
@@ -115,53 +135,45 @@ For technical support, please post your questions on the [Boundless Discussions 
 
 We have checked that bento successfully generated a test proof. We are now ready to run the broker so that we can start proving on Boundless.
 
-### Install the Boundless CLI
-
-Before we start, we'll need to install the *Boundless CLI* (which is separate to the Bento CLI we installed earlier):
-
-```bash [Terminal]
-cargo install --locked --git https://github.com/boundless-xyz/boundless boundless-cli --branch release-1.0 --bin boundless
-```
-
 ### Deposit Collateral
 
 :::warning
-*$ZKC* is only on Ethereum mainnet. 
+*$ZKC* is only on Ethereum mainnet.
 
-Therefore, to use *$ZKC* as proving collateral, provers have to first [bridge *$ZKC*](/zkc/collateral) from Ethereum mainnet to Base mainnet. 
+Therefore, to use *$ZKC* as proving collateral, provers have to first [bridge *$ZKC*](/zkc/collateral) from Ethereum mainnet to Base mainnet.
 :::
 
-With the environment variables set, you can now deposit *$ZKC* tokens as collateral to your account balance:
+With the [environment variables](/provers/quick-start#setup-environment-variables) set, you can now deposit *$ZKC* tokens as collateral to your account balance:
 
 ```bash [Terminal]
-boundless account deposit-collateral 10
+boundless account deposit-collateral 50
 ```
 
-### Start Broker
+### Start Prover
 
-You can now start broker (which runs both bento + broker i.e. the full proving stack!):
+You can now start the prover (which runs both bento + broker i.e. the full proving stack!):
 
 ```bash [Terminal]
-just broker
+just prover
 ```
 
 To check the proving logs, you can use:
 
 ```bash [Terminal]
-just broker logs
+just prover logs
 ```
 ### Stop Broker
 
 To stop broker, you can run:
 
 ```bash [Terminal]
-just broker down
+just prover down
 ```
 
 Or remove all volumes and data from the service:
 
 ```bash [Terminal]
-just broker clean
+just prover clean
 ```
 
 ## Configuring Broker
@@ -176,11 +188,11 @@ cp .env.broker-template .env.broker
 
 After which, you can use a text editor to adjust the environment variables as required.
 
-To run broker with a custom environment file:
+To run prover with a custom environment file:
 
 ```bash [Terminal]
-just broker up ./.env.broker
-just broker down ./.env.broker
+just prover up ./.env.broker
+just prover down ./.env.broker
 ```
 
 ### Broker.toml
