--- a/developers/tooling/cli.mdx
+++ b/developers/tooling/cli.mdx
@@ -1,423 +1,240 @@
-# Boundless CLI
+---
+title: Boundless CLI
+
+---
 
 :::note[Boundless CLI Source code]
 The Boundless CLI source code can be found at [boundless/crates/boundless-cli](https://github.com/boundless-xyz/boundless/tree/main/crates/boundless-cli).
 :::
 
-`boundless` is a command-line interface for interacting with the Boundless Market, specifically designed to help handle depositing, withdrawing, staking and submitting proof requests.
+`boundless` is a command-line interface for interacting with the Boundless Market, specifically designed to help requestors and provers with common interactions
 
 ## Installation
 
 You'll need to [install Rust](https://doc.rust-lang.org/cargo/getting-started/installation.html), then you can run the following command to install the CLI.
 
 ```bash
-cargo install --locked --git https://github.com/boundless-xyz/boundless boundless-cli --branch release-1.0 --bin boundless
+cargo install --locked --git https://github.com/boundless-xyz/boundless boundless-cli --branch release-1.1 --bin boundless
 ```
 
-## Usage
+## Overview
 
-```
-boundless [GLOBAL OPTIONS] <COMMAND> [COMMAND OPTIONS]
-```
+### What is a module?
 
-### Global Options
+Once installed, simply running `boundless` gives a helpful overview:
 
-You pass these before specifying a command:
+![Boundless CLI](/boundless_cli_main.png)
 
-| Option                                 | Description                                                                               |
-|----------------------------------------|-------------------------------------------------------------------------------------------|
-| `-r, --rpc-url <RPC_URL>`              | Ethereum RPC endpoint URL. Defaults to `http://localhost:8545`.                           |
-| `--private-key <PRIVATE_KEY>`          | A private key string (hex-encoded); used to sign transactions.                            |
-| `-b, --boundless-market-address <ADDR>`| Address of the Boundless Market contract.                                                 |
-| `-v, --verifier-address <ADDR>`        | Address of the Verifier contract.                                                         |
-| `-s, --set-verifier-address <ADDR>`    | Address of the SetVerifier contract.                                                      |
-| `--tx-timeout <SECONDS>`               | Transaction timeout in seconds. If set, the CLI will wait up to this duration for mining. |
-| `-h, --help`                           | Print help.                                                                               |
-| `-V, --version`                        | Print version.                                                                            |
+The CLI has three main modules:
 
+- [Requestor Module](/developers/tooling/cli#requestor): Commands for submitting proof requests
+- [Prover Module](/developers/tooling/cli#prover): Commands for locking, executing, proving and fulfilling proof requests
+- [Rewards Module](/developers/tooling/cli#rewards): Commands for staking and delegating $ZKC, claiming staking and mining rewards, seeing recent rewards and more.
 
-## Commands
+### Module setup
 
-Each command is run in the form:
-
-```
-boundless [GLOBAL OPTIONS] <COMMAND> [COMMAND OPTIONS]
-```
-
-#### Available Commands
-
-
-| Command            | Description                                                   |
-|--------------------|---------------------------------------------------------------|
-| [account](#account)          | Account management commands                         |
-| [request](#request)          | Proof request commands                              |
-| [proving](#proving)          | Proof execution commands                            |
-| [ops](#ops)                  | Operations on the boundless market                  |
-| [config](#config)      | Display configuration and environment variables     |
-
-**Examples:**
-
-Check the balance of `0x3da7206e104f6d5dd070bfe06c5373cc45c3e65c` on the Sepolia market.
+Each module has a respective interactive `setup` command which allows you to store *(in plaintext!)* variables such as relevant RPC URLs, private keys etc:
 
 ```bash
-RPC_URL=https://rpc.node \
-boundless account balance 0x3da7206e104f6d5dd070bfe06c5373cc45c3e65c
+boundless <MODULE> setup
 ```
 
-Send a proof request to the Sepolia market, with the program pre-uploaded to IPFS and an input of "hello".
+These setup commands store secrets in the `~/.boundless/` directory. Any further command calls will first check this location for the relevant secrets, otherwise it will check the flags passed directly to the command.
+
+### Command help pages
+
+For a detailed help page for a specific command, run the command with the `--help` flag, for example:
 
 ```bash
-RPC_URL=https://rpc.node \
-PRIVATE_KEY=0xabc... \
-boundless request submit-offer --wait --input "hello" \
---program-url http://dweb.link/ipfs/bafkreido62tz2uyieb3s6wmixwmg43hqybga2ztmdhimv7njuulf3yug4e
+boundless prover deposit-collateral --help
 ```
 
-Deposit 1.5 Sepolia ETH to the market.
+which will detail all the relevant options annd mandatory flags:
 
 ```bash
-RPC_URL=https://rpc.node \
-PRIVATE_KEY=0xabc... \
-boundless account deposit 1.5
+Usage: boundless prover benchmark [OPTIONS] --request-ids <REQUEST_IDS>
+
+Options:
+      --request-ids <REQUEST_IDS>
+          Proof request ids to benchmark
+
+  -h, --help
+          Print help (see a summary with '-h')
+
+Prover:
+      --prover-rpc-url <PROVER_RPC_URL>
+          RPC URL for the prover network
+
+          [env: PROVER_RPC_URL=]
+
+      --prover-private-key <PRIVATE_KEY>
+          Private key for prover transactions
+
+          [env: PROVER_PRIVATE_KEY]
+
+...
 ```
+## Modules
 
-:::tip[Alchemy]
-We recommend using Alchemy for your RPC URL during testing; their free tier is more than enough to test requesting a proof.
-Receiving proofs requires event queries, which public RPCs may not support.
-:::
+### Requestor
 
-The options for RPC URL and private key can also be passed as flags: `--rpc-url` and `--private-key`.
+The requestor module allows requestors to deposit/withdraw funds into the market, submit proof requests, track the status of any proof request, and get and verify proofs from the Boundless market.
 
-The rest of this page will assume you've set these are environment variables.
-
-### account
-
-The `account` command is used to manage your account on the Boundless Market. It allows you to deposit and withdraw Ether, check your balance, and manage your collateral.
-
-#### deposit
-
-Deposits Ether into the Boundless Market:
-
-```
-account deposit <amount>
-```
-
-Where `<amount>` is an amount of Ether to deposit, e.g. `1.5`.
-
-**Example**:
-
-```
-boundless account deposit 1
-```
-
-This deposits 1 ETH from your wallet into the Boundless Market contract.
-
-
-#### withdraw
-
-Withdraws Ether from the Boundless Market back into your externally owned account (EOA):
-
-```
-account withdraw <amount>
-```
-
-**Example**:
-
-```
-boundless account withdraw 1
-```
-
-This withdraws 1 ETH of your in-market balance back to your wallet.
-
-
-#### balance
-
-Checks the current in-market ETH balance for a given address (defaults to your address if not specified):
-
-```
-account balance [address]
-```
-
-- `[address]` (optional) — The address to check. If omitted, uses the caller's address.
-
-**Example**:
-
-```
-boundless account balance 0xabc123...
-boundless account balance
-```
-
-#### deposit-collateral
-
-Deposits ZKC into the market as collateral (ZKC is used for collateral in Boundless):
-
-```
-account deposit-collateral <amount>
-```
-
-**Example**:
-
-```
-boundless account deposit-collateral 100
-```
-
-This deposits 100 ZKC into your collateral balance.
-
-
-#### withdraw-collateral
-
-Withdraws collateral ZKC from the market:
-
-```
-account withdraw-collateral <amount>
-```
-
-**Example**:
-
-```
-boundless account withdraw-collateral 50
-```
-
-#### collateral-balance
-
-Checks the current collateral ZKC balance for a given address (defaults to your address if none given):
-
-```
-account collateral-balance [address]
-```
-
-**Example**:
-
-```
-boundless account collateral-balance 0xabc123...
-boundless account collateral-balance
-```
-
-### request
-
-The `request` command is used to manage proof requests on the Boundless Market. It allows you to create, submit, and manage proof requests.
-
-#### submit-offer
-
-{/* TODO: This needs to be rewritten to match the new CLI */}
-
-Constructs and submits a proof request by reading a YAML offer definition, plus specifying guest program, input data, and additional requirements on the command line. This is effectively a "shortcut" for quickly submitting a structured request:
-
-```
-request submit-offer [OPTIONS] <YAML_OFFER> [ID] [--wait] [--offchain] [--no-preflight]
-             --program <PATH_TO_PROGRAM>
-             --input <STRING> OR --input-file <PATH>
-             [--encode-input]
-             [--inline-input]
-             [--journal-digest <HEX> | --journal-prefix <STRING>]
-             [--callback-address <ADDRESS> --callback-gas-limit <NUM>]
-```
-
-- `yaml_offer`: path to a YAML file describing the `Offer`.
-- `id`: optional integer ID to assign to the request.
-- `--program <PATH>`: path to the guest program  to run.
-- `--input <STRING>` or `--input-file <PATH>`: data to feed the guest image.
-- `--encode-input`: if used, the input is encoded with `risc0_zkvm::serde`.
-- `--inline-input`: if used, the input is pushed onchain rather than stored offchain.
-- `--journal-digest <HEX>`: require the guest's journal to match this digest.
-- `--journal-prefix <STRING>`: require the guest's journal to start with these bytes.
-- `--callback-address <ADDRESS> --callback-gas-limit <NUM>`: optional callback triggered upon proof success.
-- `--wait`: block until the proof request is fulfilled (or expires).
-- `--offchain`: submit the request offchain to an order-stream server (requires `--order-stream-url`).
-- `--no-preflight`: skip local "dry-run" execution of the guest.
-- `--proof-type <PROOF_TYPE>`: specify the proof type to request. This is a string that indicates the type of proof you want to generate for the request.
-  - `any`: Any proof type
-  - `groth16`: Groth16 proof type
-  - `inclusion`: Inclusion proof type
-
-**Example**:
-
-```
-boundless request submit-offer offer.yaml --program guest.wasm \
-  --input-file data.bin --journal-prefix "ABCDEF" --wait
-```
-
-Submits a request reading the YAML from `offer.yaml`, providing `guest.wasm` as the program, `data.bin` as input, and requiring the journal to start with "ABCDEF". It waits for fulfillment.
-
-#### submit
-
-Submits a proof request from a single YAML file containing the entire `ProofRequest` structure. Allows offchain or onchain submission, plus optional local preflight:
-
-```
-request submit [OPTIONS] <YAML_REQUEST> [ID] [--wait] [--offchain] [--no-preflight]
-```
-
-- `yaml_request`: path to a YAML file describing a `ProofRequest`.
-- `id`: optional integer ID for the request (otherwise generated or from the YAML itself).
-- `--wait`: wait for fulfillment.
-- `--offchain`: submit to an order-stream server (requires `--order-stream-url`).
-- `--no-preflight`: skip local "dry-run" execution.
-- `--callback-address <ADDRESS> --callback-gas-limit <NUM>`: optional callback triggered upon proof success.
-- `--proof-type <PROOF_TYPE>`: specify the proof type to request. This is a string that indicates the type of proof you want to generate for the request.
-  - `any`: Any proof type
-  - `groth16`: Groth16 proof type
-  - `inclusion`: Inclusion proof type
-
-**Example**:
-
-```
-boundless request submit ./request.yaml --wait
-```
-
-#### status
-
-Shows the request status and whether it's open, locked, fulfilled, or expired:
-
-```
-request status <REQUEST_ID> [expires_at]
-```
-
-- `expires_at`: optional expiration timestamp (UNIX time). If omitted, uses the request's known end time.
-
-**Example**:
-
-```
-boundless request status 0x5...
-```
-
-#### get-proof
-
-Retrieves the final `journal` and `seal` from onchain storage for a given request ID (once fulfilled):
-
-```
-request get-proof <REQUEST_ID>
-```
-**Example**:
-```
-boundless request get-proof 0x5...
-```
-
-#### verify-proof
-
-Verifies a proof for a given request ID on the local side, checking the onchain `journal` and `seal` with the chosen image ID.
-
-```
-request verify-proof <REQUEST_ID> <IMAGE_ID>
-```
-Where `<IMAGE_ID>` is a 32-byte hex digest identifying the guest code.
-
-**Example**:
-
-```
-boundless request verify-proof 0x5... 0x0002f87ec0...
-```
-
-### proving
-
-The `proving` subcommand is used to execute guest code locally, lock and generate proofs for specific requests.
-
->**Note**: The proving subcommands are not equivalent to running a [prover cluster](../../provers/quick-start.mdx).
-
-#### execute
-
-Locally executes (without proving) the given request's guest code, either from a YAML file or fetching from chain/offchain. Allows checking correctness prior to submission:
-
-```
-proving execute [--request-path <PATH> | --request-id <U256> [--tx-hash <HASH>] [--request-digest <B256>]]
-        [--order-stream-url <URL>]
-```
-
-- `--request-path`: path to a YAML file containing the request.
-- `--request-id`: the proof request identifier.
-- `--request-digest`: request's EIP712 digest (optional).
-- `--tx-hash`: transaction hash (optional, to find the request).
-- `--order-stream-url`: fetch request data from an offchain server.
-
-**Examples**:
-
-- **Execute from local YAML**:
-  ```
-  boundless proving execute --request-path ./request.yaml
-  ```
-
-- **Execute from onchain** (specifying the request ID):
-  ```
-  boundless proving execute --request-id 0x5... --tx-hash 0xabc...
-  ```
-
-#### fulfill
-
-Generates valid proofs locally for one or more requests, then publishes the fulfillments onchain. This subcommand uses the RISC Zero default prover and can process multiple requests in a single batch, which is more efficient than fulfilling requests individually:
-
-```
-proving fulfill --request-ids <U256,...> [--request-digests <B256,...>] [--tx-hashes <B256,...>]
-        [--order-stream-url <URL>]
-```
-- `--request-ids`: comma-separated list of proof request identifiers (hex values)
-- `--request-digests`: comma-separated list of request EIP712 digests (optional, must match request_ids length and order)
-- `--tx-hashes`: comma-separated list of transaction hashes (optional, must match request_ids length and order)
-- `--order-stream-url`: fetch request data from an offchain server
-
-**Examples**:
-
-```
-# Fulfill a single request
-boundless proving fulfill --request-ids 0x5...
-
-# Fulfill multiple requests
-boundless proving fulfill --request-ids 0x123,0x456,0x789
-
-# Fulfill multiple requests with digests and tx hashes
-boundless proving fulfill --request-ids 0x123,0x456,0x789 \
-    --request-digests 0xabc,0xdef,0x012 \
-    --tx-hashes 0x111,0x222,0x333
-```
-
-#### lock
-
-Locks the request on the market, preventing other provers to acquire the exclusive right to get paid for its fulfillment, as long as the request gets fulfilled before the lock timeout:
-
-```
-proving lock --request-id <U256> [--request-digest <B256>] [--tx-hash <B256>]
-        [--order-stream-url <URL>]
-```
-- `--request-id`: the proof request identifier.
-- `--request-digest`: request's EIP712 digest (optional).
-- `--tx-hash`: transaction hash (optional, to find the request).
-- `--order-stream-url`: fetch request data from an offchain server.
-
-**Example**:
-```
-boundless proving lock --request-id 0x5...
-```
-
-### ops
-
-The `ops` command is used to manage operations on the Boundless Market. Currently, it only supports slashing expired orders.
-
-#### slash
-
-Slashes a prover for failing to meet obligations for a given request ID (only the requestor can slash):
-
-```
-ops slash <REQUEST_ID>
-```
-
-**Example**:
-
-```
-boundless ops slash 0x5...
-```
-
-### config
-
-To make sure everything is set up correctly, you can run the following command:
+To see all available requestor module commands, run:
 
 ```bash
-boundless config
+boundless requestor --help
 ```
 
-This will display the current configuration, including the RPC URL, private key, Boundless Market address, Verifier address, and SetVerifier address.
-This is useful for verifying that the CLI is correctly configured to interact with the Boundless Market and the Ethereum network.
+#### Requestor Commands
+
+```bash
+Usage: boundless requestor [OPTIONS] <COMMAND>
+
+Commands:
+  config             Show requestor configuration status
+  deposit            Deposit funds into the market
+  withdraw           Withdraw funds from the market
+  deposited-balance  Check the balance of an account in the market
+  balance            Check the balance of an account (alias for deposited-balance)
+  submit-file        Submit a fully specified proof request from a YAML file
+  submit             Submit a proof request constructed with the given offer, input, and image
+  status             Get the status of a given request
+  get-proof          Get the journal and seal for a given request
+  verify-proof       Verify the proof of the given request
+  setup              Interactive setup wizard for requestor configuration
+  help               Print this message or the help of the given subcommand(s)
+
+Options:
+  -h, --help  Print help
+
+Global Options:
+      --tx-timeout <TX_TIMEOUT>  Ethereum transaction timeout in seconds [env: TX_TIMEOUT=]
+      --log-level <LOG_LEVEL>    Log level (error, warn, info, debug, trace) [env: LOG_LEVEL=] [default: warn]
+
+Module Configuration:
+  Run 'boundless requestor setup' for interactive setup
+
+  Alternatively set environment variables:
+    REQUESTOR_RPC_URL         RPC endpoint for requestor module
+    REQUESTOR_PRIVATE_KEY     Private key for requestor transactions
+    BOUNDLESS_MARKET_ADDRESS  Market contract address (optional, has default)
+    SET_VERIFIER_ADDRESS      Verifier contract address (optional, has default)
+
+  Or configure while executing commands:
+    Example: boundless requestor balance --requestor-rpc-url <url> --requestor-private-key <key>
+
+```
+
+### Prover
+
+The prover module allows provers to deposit collateral into the market, lock and fulfill orders, carry out benchmarking, manually execute guest programs from the market (useful for debugging), and provides functionality to manually slash an order.
+
+To see all available prover module commands, run:
+
+```bash
+boundless prover --help
+```
+
+#### Prover Commands
+
+```bash
+Usage: boundless prover [OPTIONS] <COMMAND>
+
+Commands:
+  config               Show prover configuration status
+  deposit-collateral   Deposit collateral funds into the market
+  withdraw-collateral  Withdraw collateral funds from the market
+  balance-collateral   Check the collateral balance of an account
+  lock                 Lock a request in the market
+  fulfill              Fulfill one or more proof requests
+  execute              Execute a proof request using the RISC Zero zkVM executor
+  benchmark            Benchmark proof requests
+  slash                Slash a prover for a given request
+  setup                Interactive setup wizard for prover configuration
+  help                 Print this message or the help of the given subcommand(s)
+
+Options:
+  -h, --help  Print help
+
+Global Options:
+      --tx-timeout <TX_TIMEOUT>  Ethereum transaction timeout in seconds [env: TX_TIMEOUT=]
+      --log-level <LOG_LEVEL>    Log level (error, warn, info, debug, trace) [env: LOG_LEVEL=] [default: info]
+
+Module Configuration:
+  Run 'boundless prover setup' for interactive setup
+
+  Alternatively set environment variables:
+    PROVER_RPC_URL            RPC endpoint for prover module
+    PROVER_PRIVATE_KEY        Private key for prover transactions
+    BOUNDLESS_MARKET_ADDRESS  Market contract address (optional, has default)
+    SET_VERIFIER_ADDRESS      Verifier contract address (optional, has default)
+
+  Or configure while executing commands:
+    Example: boundless prover balance --prover-rpc-url <url> --prover-private-key <key>
+```
+
+### Rewards
+
+The rewards module allows provers to deposit collateral into the market, lock and fulfill orders, carry out benchmarking, manually execute guest programs from the market (useful for debugging), and provides functionality to manually slash an order.
+
+For a full walkthrough on the ZK mining process, see [ZK Mining Overview](/zkc/mining/overview).
+
+To see all available rewards module commands, run:
+
+```bash
+boundless rewards --help
+```
+
+#### Reward Commands
+
+```bash
+Usage: boundless rewards [OPTIONS] <COMMAND>
+
+Commands:
+  config                 Show rewards configuration status
+  stake-zkc              Stake ZKC tokens
+  balance-zkc            Check ZKC balance
+  staked-balance-zkc     Check staked ZKC balance
+  list-staking-rewards   List staking rewards by epoch
+  list-mining-rewards    List mining rewards by epoch
+  prepare-mining         Prepare mining work log update
+  submit-mining          Submit mining work updates
+  claim-mining-rewards   Claim mining rewards
+  claim-staking-rewards  Claim staking rewards
+  delegate               Delegate rewards to another address
+  get-delegate           Get rewards delegate
+  epoch                  Get current epoch information
+  power                  Check reward power and earning potential
+  inspect-mining-state   Inspect mining state file and display detailed statistics
+  setup                  Interactive setup wizard for rewards configuration
+  help                   Print this message or the help of the given subcommand(s)
+
+Options:
+  -h, --help  Print help
+
+Global Options:
+      --tx-timeout <TX_TIMEOUT>  Ethereum transaction timeout in seconds [env: TX_TIMEOUT=]
+      --log-level <LOG_LEVEL>    Log level (error, warn, info, debug, trace) [env: LOG_LEVEL=] [default: warn]
+
+Module Configuration:
+  Run 'boundless rewards setup' for interactive setup
+
+  Alternatively set environment variables:
+    REWARD_RPC_URL            RPC endpoint for rewards module
+    REWARD_PRIVATE_KEY        Private key for reward transactions
+    STAKING_PRIVATE_KEY       Private key for staking (can differ from reward key)
+    MINING_STATE_FILE         Path to mining state file (optional)
+    ZKC_ADDRESS               ZKC token contract (optional, has default)
+    VEZKC_ADDRESS             Staked ZKC NFT contract (optional, has default)
+    STAKING_REWARDS_ADDRESS   Rewards distribution contract (optional, has default)
+    BEACON_API_URL            Beacon API URL (optional)
+
+  Or configure while executing commands:
+    Example: boundless rewards balance-zkc --reward-rpc-url <url> --staking-private-key <key>
+```
 
 ## Requesting a Proof via the Boundless CLI
-
-{/* TODO: Really, its most use for debugging when you want to try specific modifications of an order, or replay an order that was extracted from the market. */}
 
 In early testing, and when trying out new order parameters, it can be useful to submit a request via the Boundless CLI.
 
@@ -442,8 +259,6 @@ To submit a proof, a valid `request.yaml` is required, this config file will spe
   - This includes the minimum and maximum price for the proof request, the block number to open bidding, the price ramp up period, how many blocks before the request should timeout, and the lock-in stake the prover has to escrow to submit a bid.
 
 Below is an example of a `request.yaml` file that can be used with the `boundless submit request` command.
-
-{/* TODO: This needs to be tested to make sure it still works */}
 
 ```yaml [request.yaml]
 # Unique ID for this request, constructed from the client address and a 32-bit index.
