--- a/developers/tutorials/request.mdx
+++ b/developers/tutorials/request.mdx
@@ -1,11 +1,6 @@
----
-title: Request a Proof
-description:
-icon: 'hand'
----
-
-
 import { StripRustCodeComments } from "../../../components/strip-rust-code-comments";
+
+# Request a Proof
 
 The [Boundless Market SDK](/developers/tooling/sdk) allows developers to build and submit requests to the Boundless protocol; the SDK has sensible defaults, designed to make sending ~95% of requests straightforward.
 
@@ -361,7 +356,7 @@ let (request_id, expires_at) = client.submit_onchain(request).await?; // [!code 
 #### Offchain
 
 :::note[Submitting offchain?]
-When using offchain requests, you are required to deposit funds into the Boundless market contract before you can make any proof requests. This can be done with the [Boundless CLI deposit subcommand](/developers/tooling/cli#deposit).
+When using offchain requests, you are required to deposit funds into the Boundless market contract before you can make any proof requests. This can be done with the [Boundless CLI](/developers/tooling/cli#requestor).
 :::
 
 To submit a request offchain, we use:
