--- a/developers/tutorials/troubleshooting.mdx
+++ b/developers/tutorials/troubleshooting.mdx
@@ -1,8 +1,4 @@
----
-title: Troubleshooting
-description:
-icon: 'bug-slash'
----
+# Troubleshooting a Request
 
 :::tip[Need Help?]
 Join our [Discord community](https://discord.gg/aXRuD6spez) and claim the developer role via [Guild.xyz](https://guild.xyz/boundless-xyz) to get access to the **#dev-support-forum** channel where you can ask questions and get help from the Boundless team and community.
