--- a/zkc/mining/claiming-rewards.mdx
+++ b/zkc/mining/claiming-rewards.mdx
@@ -3,25 +3,25 @@
 ## Mining Rewards
 
 :::tip
-Claiming mining rewards requires *both* a valid archive node RPC endpoint and a Beacon Chain RPC endpoint. 
+Claiming mining rewards requires *both* a valid archive node RPC endpoint and a Beacon Chain RPC endpoint.
 
-In our testing, the Alchemy free RPC plan in combination with the public beacon chain API URL (`https://ethereum-beacon-api.publicnode.com/`) works for claiming rewards. Quicknode works for the beacon chain endpoint, but both free and paid Quicknode RPC endpoints are not recommended for `claim` as it commonly errors with request rate limits. 
+In our testing, the Alchemy paid RPC plan in combination with the public beacon chain API URL (`https://ethereum-beacon-api.publicnode.com/`) works for claiming rewards. Quicknode works for the beacon chain endpoint, but Quicknode RPC endpoints are not recommended for `claim-mining-rewards` as it commonly errors with request rate limits.
 :::
 
 After the reward epoch has finalized, mining rewards can be claimed with:
 
 ```bash
-boundless povw claim --log-id ${REWARD_ADDRESS} --rpc-url ${RPC_URL} --beacon-api-url ${BEACON_CHAIN_RPC_ENDPOINT} --private-key ${PRIVATE_KEY}
+boundless rewards claim-mining-rewards
 ```
 
-This process is permissionless and DOES NOT require the private key for the address eligible for the rewards. The only requirement is that the `PRIVATE_KEY` has enough funds to cover gas costs on Ethereum mainnet. `claim` uses Bento for proving (see [claim.rs](https://github.com/boundless-xyz/boundless/blob/040645c9f91bc4804ba63c9b4744a5a21df0c90c/crates/boundless-cli/src/commands/povw/claim.rs#L244-L267)); therefore, make sure to have Bento running locally or specify a valid Bento API URL endpoint via `--bento-api-url`.
+This process is permissionless and DOES NOT require the private key for the address eligible for the rewards. The only requirement is that the stored `PRIVATE_KEY` has enough funds to cover gas costs on Ethereum mainnet. `claim-mining-rewards` uses Bento for proving (see [claim.rs](https://github.com/boundless-xyz/boundless/blob/040645c9f91bc4804ba63c9b4744a5a21df0c90c/crates/boundless-cli/src/commands/povw/claim.rs#L244-L267)); therefore, make sure to have Bento running locally or specify a valid Bento API URL endpoint via `--bento-api-url`.
 
 ## Staking Rewards
 
 After the reward epoch has finalized, staking rewards can be claimed with:
 
 ```bash
-boundless zkc claim-rewards --rpc-url <RPC_URL> --private-key <PRIVATE_KEY>
+boundless rewards claim-staking-rewards
 ```
 
 where `PRIVATE_KEY` is the private key of the address that has the [reward power](/zkc/mining/wallet-setup#stakes-zkc-and-receives-reward-power). This would be the private key for the rewards address when using the [recommended wallet setup](/zkc/mining/wallet-setup).
@@ -31,11 +31,5 @@ where `PRIVATE_KEY` is the private key of the address that has the [reward power
 If the reward epoch has not been finalized yet, provers can check details of the the current epoch:
 
 ```bash
-boundless zkc get-current-epoch
-```
-
-This will return the epoch number; this epoch number can be passed into the following command to get the end time for the current epoch:
-
-```bash
-boundless zkc get-epoch-end-time <EPOCH_NUMBER>
+boundless rewards epoch
 ```
