--- a/zkc/mining/overview.mdx
+++ b/zkc/mining/overview.mdx
@@ -1,7 +1,7 @@
 # ZK Mining Overview
 
 :::note
-This page covers the high level concepts behind ZK mining. 
+This page covers the high level concepts behind ZK mining.
 
 If you're looking for technical tutorials on setting up ZK mining and claiming rewards, please see the following:
 
@@ -13,7 +13,7 @@ If you're looking for technical tutorials on setting up ZK mining and claiming r
 
 ## What is ZK Mining?
 
-Proof of Verifiable Work (PoVW), a novel invention within Boundless, is a permissionless incentive mechanism which enables provers to be rewarded in *$ZKC* in exchange for their proving work on the Boundless marketplace or elsewhere. Provers generating zero-knowledge proofs are rewarded with *$ZKC*; this process is known as *ZK Mining*. 
+Proof of Verifiable Work (PoVW), a novel invention within Boundless, is a permissionless incentive mechanism which enables provers to be rewarded in *$ZKC* in exchange for their proving work on the Boundless marketplace or elsewhere. Provers generating zero-knowledge proofs are rewarded with *$ZKC*; this process is known as *ZK Mining*.
 
 
 ### ZK Mining Lifecycle
@@ -21,17 +21,17 @@ Proof of Verifiable Work (PoVW), a novel invention within Boundless, is a permis
 ::::steps
 #### Provers generate ZK proofs + work proofs
 
-Generating a ZK proof, with the "Reward Address" specified in Bento, will generate an associated "work proof". This work proof proves that the prover generated a valid ZK proof and tallies the amount of "work" done (measured in [cycles](https://dev.risczero.com/terminology#clock-cycles)). 
+Generating a ZK proof, with the "Reward Address" specified in Bento, will generate an associated "work proof". This work proof proves that the prover generated a valid ZK proof and tallies the amount of "work" done (measured in [cycles](https://dev.risczero.com/terminology#clock-cycles)).
 
-#### Provers aggregate work proofs with `prepare`
+#### Provers aggregate work proofs with `prepare-mining`
 
-The `prepare` CLI command (`boundless povw prepare ...`) compresses all local work proofs (stored in Bento) to reflect work done during any given epoch. This aggregated proof is stored in a local “state” file.
+The `prepare-mining` CLI command (`boundless rewards prepare-mining...`) compresses all local work proofs (stored in Bento) to reflect work done during any given epoch. This aggregated proof is stored in a local “state” file.
 
-#### Provers submit the aggregated work proof with `submit`
+#### Provers submit the aggregated work proof with `submit-mining`
 
-Towards the end of an epoch, the prover must verify their work done to the PoVW contracts using the `submit` CLI command (`boundless povw submit ...`).
+Towards the end of an epoch, the prover must verify their work done using the `submit-mining` CLI command (`boundless rewards submit-mining ...`).
 
-Provers submit the aggregated work proof to the PoVW smart contract to prove their total work done during the current reward epoch. `submit` uses the rewards address's private key for signing and posting the work proof onchain.
+Provers submit the aggregated work proof to the PoVW smart contract to prove their total work done during the current reward epoch. `submit-mining` uses the rewards address's private key for signing and posting the work proof onchain.
 
 #### Provers wait for current epoch to finalize
 
@@ -39,9 +39,9 @@ The prover waits for the current reward epoch to finalize. This allows all work 
 
 To check details of the current epoch, please see [Checking Details of Current Reward Epoch](/zkc/mining/claiming-rewards#checking-details-of-current-reward-epoch),
 
-#### Provers claim rewards with `claim`
+#### Provers claim rewards with `claim-mining-rewards`
 
-Once the epoch has been finalized, the `claim` CLI command can be used to claim any unclaimed rewards; claiming rewards does not have to be done every epoch; all unclaimed rewards from past epochs will be claimed automatically on the next valid `claim` call.
+Once the epoch has been finalized, the `claim-mining-rewards` CLI command can be used to claim any unclaimed mining rewards; claiming rewards does not have to be done every epoch; all unclaimed rewards from past epochs will be claimed automatically on the next valid `claim-mining-rewards` call.
 
 #### Repeat steps 1 - 4 every epoch
 
@@ -52,10 +52,10 @@ With the start of the new epoch, all provers start with a work total of 0. Prove
 ## Who can ZK mine?
 
 * Provers must satisfy the [minimum hardware requirements](/provers/quick-start#requirements) to be able to run [Bento](/provers/proving-stack#what-is-bento).
-* Provers must [stake $ZKC](/zkc/quick-start#how-to-stake-zkc) to be eligible for PoVW rewards. 
+* Provers must [stake $ZKC](/zkc/quick-start#how-to-stake-zkc) to be eligible for PoVW rewards.
   * Before staking, any proving work submitted *is not* eligible for rewards.
   * After staking, any work submitted is eligible for rewards in the current reward epoch.
 * The maximum mining rewards each prover can earn for each reward epoch is directly correlated with their total staked *$ZKC*. It is currently `staked_amount/15` (please see [Mining Rewards](/zkc/quick-start#mining-rewards)).
-* Provers must enable ZK mining in Bento by specifying the `REWARD_ADDRESS` environment variable. 
+* Provers must enable ZK mining in Bento by specifying the `REWARD_ADDRESS` environment variable.
 * To learn how to enable ZK mining, see [Enabling ZK mining](/zkc/mining/enable).
 
