--- a/zkc/mining/wallet-setup.mdx
+++ b/zkc/mining/wallet-setup.mdx
@@ -1,6 +1,6 @@
 # Wallet Setup
 
-This page covers some best practices when it comes to wallets used for [staking *$ZKC*](/zkc/quick-start#how-to-stake-zkc), [ZK mining](/zkc/mining/overview) and [running a Boundless prover](/provers/quick-start). 
+This page covers some best practices when it comes to wallets used for [staking *$ZKC*](/zkc/quick-start#how-to-stake-zkc), [ZK mining](/zkc/mining/overview) and [running a Boundless prover](/provers/quick-start).
 
 Please note that not every prover will need to separate every wallet from each other. Every additional wallet comes with the overhead of keeping another private key safe for prover operation. This guide assumes provers have a large active *$ZKC* stake position which they want to keep separate from daily ZK mining and Boundless prover operations.
 
@@ -17,9 +17,9 @@ The prover stakes *$ZKC*, this gives [reward power](https://github.com/boundless
 
 ### Delegates "Reward Power" to Reward Address
 
-The staking address can delegate the reward power to another address known as the *delegatee*. We recommend delegating reward power, as it allows for a hot wallet to receive rewards *and* to restake the rewards to increase the total reward power for compounding gains. Restaking directly with a cold wallet would be quite troublesome, as it would require restaking every epoch (~2 days). 
+The staking address can delegate the reward power to another address known as the *delegatee*. We recommend delegating reward power, as it allows for a hot wallet to receive rewards *and* to restake the rewards to increase the total reward power for compounding gains. Restaking directly with a cold wallet would be quite troublesome, as it would require restaking every epoch (~2 days).
 
-Separating the staking wallet from the reward address also means that a maximum of a single reward epoch's rewards are lost if the reward address private key is lost or compromised. This is because the staking address can simply re-delegate rewards to a new address and [enable ZK mining](/zkc/mining/enable) with that address specified. Otherwise, without separation between the staking address and the rewards address, the prover would lose *both* the total stake position and the total reward power.  
+Separating the staking wallet from the reward address also means that a maximum of a single reward epoch's rewards are lost if the reward address private key is lost or compromised. This is because the staking address can simply re-delegate rewards to a new address and [enable ZK mining](/zkc/mining/enable) with that address specified. Otherwise, without separation between the staking address and the rewards address, the prover would lose *both* the total stake position and the total reward power.
 
 ### Submits Proof of Verifiable Work
 
@@ -40,7 +40,7 @@ After claiming staking + mining rewards, the *$ZKC* rewards contract will carry 
 
 ## Recommendations
 
-To [enable ZK mining](/zkc/mining/enable), the prover specifies the `REWARD_ADDRESS` environment variable which must be a valid Ethereum address. This address *does not* have to be the same as the *$ZKC* staking wallet address or a Boundless prover address[^1], though a single address can be used for all three purposes. It is NOT recommended to use a single address for all three purposes; if the private key is compromised or lost, this will lead to a loss of staked *$ZKC*, loss of $ZKC rewards, and the loss of boundless prover *$ZKC* [collateral](/zkc/collateral) balance. 
+To [enable ZK mining](/zkc/mining/enable), the prover specifies the `REWARD_ADDRESS` environment variable which must be a valid Ethereum address. This address *does not* have to be the same as the *$ZKC* staking wallet address or a Boundless prover address[^1], though a single address can be used for all three purposes. It is NOT recommended to use a single address for all three purposes; if the private key is compromised or lost, this will lead to a loss of staked *$ZKC*, loss of $ZKC rewards, and the loss of boundless prover *$ZKC* [collateral](/zkc/collateral) balance.
 
 ### Separate Staking Wallet and Reward Wallet
 
@@ -67,14 +67,14 @@ export ZKC_WALLET_ADDRESS="0x0000...0000"
 export PRIVATE_KEY="..."
 ```
 
-Provers can now follow the [staking instructions](/zkc/quick-start#how-to-stake-zkc) to stake $ZKC from the `ZKC_WALLET_ADDRESS`. 
+Provers can now follow the [staking instructions](/zkc/quick-start#how-to-stake-zkc) to stake $ZKC from the `ZKC_WALLET_ADDRESS`.
 
 #### Delegate Rewards
 
 Once staked, provers can delegate rewards i.e. associate the `REWARD_ADDRESS` with `ZKC_WALLET_ADDRESS`. This is done with the following command:
 
 ```bash
-boundless zkc delegate-rewards ${REWARD_ADDRESS}
+boundless rewards delegate ${REWARD_ADDRESS}
 ```
 
 This command uses the `PRIVATE_KEY` environment variable to send a transaction onchain, therefore funds are required on `ZKC_WALLET_ADDRESS`.
@@ -91,22 +91,20 @@ We recommend that provers separate their Boundless prover address from their sta
 
 ![Wallet Setup](/boundless_wallet_setup.png)
 
-This setup allows the proving cluster to prove orders on the Boundless market and generate and [submit aggregated work proofs onchain](/zkc/mining/walkthrough#submit-the-aggregated-work-proof-onchain) to be eligible for rewards. It also means that after running `claim`, the reward $ZKC is transferred to the reward address. Claiming rewards is a permissionless process and does not require access to the private key for the rewards address.
+This setup allows the proving cluster to prove orders on the Boundless market and generate and [submit aggregated work proofs onchain](/zkc/mining/walkthrough#submit-the-aggregated-work-proof-onchain) to be eligible for rewards. It also means that after running `claim-mining-rewards`, the reward $ZKC is transferred to the reward address. Claiming rewards is a permissionless process and does not require access to the private key for the rewards address.
 
 ### Separating Staking Wallet and Value Recipient
 
 :::warning
-The value recipient will ONLY receive the mining rewards, NOT the staking rewards. There is currently no feature available to specify a value recipient for the staking rewards; this is being considered on our roadmap. If you would like to see this feature, please feel free to post in the [Boundless Discussions Forum](https://github.com/boundless-xyz/boundless/discussions).
+The recipient specified below will ONLY receive the mining rewards, NOT the staking rewards. There is currently no feature available to specify a recipient for the staking rewards; this is being considered on our roadmap. If you would like to see this feature, please feel free to post in the [Boundless Discussions Forum](https://github.com/boundless-xyz/boundless/discussions).
 :::
 
-If provers would like all *mining* rewards to be sent to a safer address (i.e. another cold wallet like the *staking wallet*), they can specify another address when running `submit`:
+If provers would like all *mining* rewards to be sent to a safer address (i.e. another cold wallet like the *staking wallet*), they can specify another address when running `submit-mining`:
 
 ```bash
-boundless povw submit --value-recipient <VALUE_RECIPIENT>
+boundless rewards submit-mining --recipient <RECIPIENT>
 ```
 
-This is a separate Ethereum address which will receive only the mining *$ZKC* rewards for that *specific* submit call. If the next submit does NOT specify a value recipient, then the rewards will be sent to the address with the reward power i.e. either the staking wallet, or the rewards address.
-
-
+This is a separate Ethereum address which will receive only the mining *$ZKC* rewards for that *specific* submit call. If the submit does NOT specify a recipient, then the command will default to the stored rewards address from the rewards module config (run `boundless rewards config` to see the stored value).
 
 [^1]: Note that mining rewards are eligible for *all verifiable work*, not solely work done to prove Boundless market orders. Therefore, provers not connected to the Boundless market are still eligible for *$ZKC* rewards, provided they are proving during the epoch and they have staked *$ZKC*.
