--- a/developers/kailua/intro.mdx
+++ b/developers/kailua/intro.mdx
@@ -1,7 +1,4 @@
----
-title: Kailua - A Hybrid Architecture for OP Rollups
-
----
+# Introducing OP Kailua: A Hybrid Architecture for OP Rollups
 
 :::warning[Caution]
 `OP Kailua` as well as `kona` are still in active development and are NOT recommended for production usage.
