--- a/developers/tooling/cli.mdx
+++ b/developers/tooling/cli.mdx
@@ -1,7 +1,4 @@
----
-title: Boundless CLI
-
----
+# Boundless CLI
 
 :::note[Boundless CLI Source code]
 The Boundless CLI source code can be found at [boundless/crates/boundless-cli](https://github.com/boundless-xyz/boundless/tree/main/crates/boundless-cli).
