--- a/developers/tooling/sdk.mdx
+++ b/developers/tooling/sdk.mdx
@@ -1,11 +1,4 @@
----
-title: Boundless SDK
-
----
-
-
-import { StripRustCodeComments } from "../../../components/strip-rust-code-comments";
-
+# Boundless Rust SDK
 
 The Boundless Market SDK offers high-level Rust APIs for interacting with the Boundless Market smart contracts, preparing and submitting ZK proofs, and handling relevant offchain data such as images and inputs.
 
